--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,6 @@ pytorch-wavelets==1.3.0
 matplotlib==3.10.1
 setuptools==69.5.1
 runpod==1.7.9
+fastapi==0.115.5
+uvicorn[standard]==0.32.0
+boto3==1.35.49
